--- a/addons/lunch/static/src/css/lunch.sass
+++ b/addons/lunch/static/src/css/lunch.sass
@@ -1,24 +1,24 @@
 @charset "utf-8"
 
 .openerp
-    .oe_lunch
-        .oe_lunch_alert
+    .o_lunch
+        .o_lunch_alert
             height: 22px
-        .oe_lunch_30pc
+        .o_lunch_30pc
             width: 30%
             display: inline-block
             vertical-align: top
-        .oe_lunch_30pc:nth-child(3)
+        .o_lunch_30pc:nth-child(3)
             padding-right: 0
-        .oe_lunch_30pc
+        .o_lunch_30pc
             padding-right: 5%
         h2
             color: #7C7BAD
-        .oe_lunch_vignette
+        .o_lunch_vignette
             border-bottom: 1px solid #dddddd
             padding-top: 5px
             padding-bottom: 5px
-        .oe_lunch_vignette:last-child
+        .o_lunch_vignette:last-child
             border: none
         .oe_group_text_button
             margin-bottom: 3px
