--- a/addons/lunch/views/lunch_view.xml
+++ b/addons/lunch/views/lunch_view.xml
@@ -8,7 +8,7 @@
         <menuitem name="Configuration" parent="menu_lunch" id="menu_lunch_config" sequence="53" groups="group_lunch_manager"/>
 
          <!--View Search to group/filter by Supplier and time-->
-        <record model="ir.ui.view" id="view_lunch_order_line_search">
+        <record id="lunch_order_line_view_search" model="ir.ui.view">
             <field name="name">lunch.order.line.search</field>
             <field name="model">lunch.order.line</field>
             <field name="arch" type="xml">
@@ -29,7 +29,7 @@
         </record>
 
         <!--View Search to group by employee and input/output (cashmoves)-->
-        <record id="view_lunch_cashmove_search" model="ir.ui.view">
+        <record id="lunch_cashmove_view_search" model="ir.ui.view">
             <field name='name'>lunch.cashmove.search</field>
             <field name='model'>lunch.cashmove</field>
             <field name='arch' type='xml'>
@@ -44,7 +44,7 @@
             </field>
         </record>
 
-        <record id="view_lunch_cashmove_search_2" model="ir.ui.view">
+        <record id="lunch_cashmove_view_search_2" model="ir.ui.view">
             <field name='name'>lunch.cashmove.search</field>
             <field name='model'>lunch.cashmove</field>
             <field name='arch' type='xml'>
@@ -59,7 +59,7 @@
         </record>
 
         <!--View search for order-->
-        <record id="view_lunch_order_search" model="ir.ui.view">
+        <record id="lunch_order_view_search" model="ir.ui.view">
             <field name='name'>lunch.order.search</field>
             <field name='model'>lunch.order</field>
             <field name='arch' type='xml'>
@@ -74,7 +74,7 @@
         </record>
 
 
-        <record id="view_lunch_alert_search" model="ir.ui.view">
+        <record id="lunch_alert_view_search" model="ir.ui.view">
             <field name="name">lunch.alert.search</field>
             <field name="model">lunch.alert</field>
             <field name="arch" type="xml">
@@ -85,7 +85,7 @@
         </record>
 
         <!--view for cashmove-->
-        <record id="view_lunch_cashmove_tree" model="ir.ui.view">
+        <record id="lunch_cashmove_view_tree" model="ir.ui.view">
             <field name="name">lunch.cashmove.tree</field>
             <field name="model">lunch.cashmove</field>
             <field name="arch" type="xml">
@@ -98,7 +98,7 @@
             </field>
         </record>
 
-        <record id="view_lunch_cashmove_form" model="ir.ui.view">
+        <record id="lunch_cashmove_view_form" model="ir.ui.view">
             <field name="name">lunch.cashmove.form</field>
             <field name="model">lunch.cashmove</field>
             <field name="arch" type="xml">
@@ -119,18 +119,18 @@
 
 
         <!--Action for Your Orders-->
-        <record model="ir.actions.act_window" id="action_lunch_order_form">
+        <record id="lunch_order_action_form" model="ir.actions.act_window">
             <field name="name">New Order</field>
             <field name="res_model">lunch.order</field>
             <field name="view_mode">form</field>
         </record>
-        <menuitem name="New Order" parent="menu_lunch_title" id="menu_lunch_order_form" action="action_lunch_order_form" sequence="1"/>
+        <menuitem name="New Order" parent="menu_lunch_title" id="lunch_order_menu_form" action="lunch_order_action_form" sequence="1"/>
 
-        <record model="ir.actions.act_window" id="action_lunch_order_tree">
+        <record id="lunch_order_action_tree" model="ir.actions.act_window">
             <field name="name">Your Orders</field>
             <field name="res_model">lunch.order</field>
             <field name="view_mode">tree,form</field>
-            <field name="search_view_id" ref="view_lunch_order_search"/>
+            <field name="search_view_id" ref="lunch_order_view_search"/>
             <field name="context">{"search_default_is_mine":1}</field>
             <field name="help" type="html">
             <p class="oe_view_nocontent_create">
@@ -143,9 +143,9 @@
             </p>
             </field>
         </record>
-        <menuitem name="Previous Orders" parent="menu_lunch_title" id="menu_lunch_order_tree" action="action_lunch_order_tree" sequence="2"/>
+        <menuitem name="Previous Orders" parent="menu_lunch_title" id="lunch_order_menu_tree" action="lunch_order_action_tree" sequence="2"/>
 
-        <record model="ir.ui.view" id="view_lunch_cashmove_tree_2">
+        <record id="lunch_cashmove_view_tree_2" model="ir.ui.view">
             <field name="name">lunch.cashmove.tree</field>
             <field name="model">lunch.cashmove</field>
             <field name="arch" type="xml">
@@ -159,13 +159,13 @@
         </record>
 
         <!--Action for Lunch cashmoves-->
-        <record model="ir.actions.act_window" id="action_lunch_cashmove_form">
+        <record id="lunch_cashmove_action_account" model="ir.actions.act_window">
             <field name="name">Your Account</field>
             <field name="res_model">lunch.cashmove</field>
             <field name="view_mode">tree</field>
-            <field name="search_view_id" ref="view_lunch_cashmove_search"/>
+            <field name="search_view_id" ref="lunch_cashmove_view_search"/>
             <field name="context">{"search_default_is_mine_group":1}</field>
-            <field name="view_id" ref="view_lunch_cashmove_tree_2"/>
+            <field name="view_id" ref="lunch_cashmove_view_tree_2"/>
             <field name="help" type="html">
               <p>
                 Here you can see your cash moves.<br/>A cash moves can be either an expense or a payment.
@@ -173,14 +173,14 @@
               </p>
             </field>
         </record>
-        <menuitem name="Your Lunch Account" parent="menu_lunch_title" id="menu_lunch_cashmove_form" action="action_lunch_cashmove_form" sequence="3"/>
+        <menuitem name="Your Lunch Account" parent="menu_lunch_title" id="lunch_cashmove_menu_form" action="lunch_cashmove_action_account" sequence="3"/>
 
         <!--Action for Administrate Orders group by supplier-->
-        <record model="ir.actions.act_window" id="action_lunch_order_by_supplier_form">
+        <record id="lunch_order_line_action_by_supplier" model="ir.actions.act_window">
             <field name="name">Orders by Supplier</field>
             <field name="res_model">lunch.order.line</field>
             <field name="view_mode">tree</field>
-            <field name="search_view_id" ref="view_lunch_order_line_search"/>
+            <field name="search_view_id" ref="lunch_order_line_view_search"/>
             <field name="context">{"search_default_group_by_supplier":1, "search_default_today":1}</field>
             <field name="help" type="html">
               <p>
@@ -193,14 +193,14 @@
               </p>
             </field>
         </record>
-        <menuitem name="Today's Orders by Supplier" parent="menu_lunch_admin" id="menu_lunch_order_by_supplier_form" action="action_lunch_order_by_supplier_form" />
+        <menuitem name="Today's Orders by Supplier" parent="menu_lunch_admin" id="lunch_order_line_menu_by_supplier" action="lunch_order_line_action_by_supplier" />
 
         <!--Action for control Supplier-->
-        <record model="ir.actions.act_window" id="action_lunch_control_suppliers">
+        <record id="lunch_order_line_action_control_suppliers" model="ir.actions.act_window">
             <field name="name">Control Suppliers</field>
             <field name="res_model">lunch.order.line</field>
             <field name="view_mode">tree</field>
-            <field name="search_view_id" ref="view_lunch_order_line_search"/>
+            <field name="search_view_id" ref="lunch_order_line_view_search"/>
             <field name="context">{"search_default_group_by_date":1, "search_default_group_by_supplier":1}</field>
             <field name="help" type="html">
               <p>
@@ -213,16 +213,16 @@
               </p>
             </field>
         </record>
-        <menuitem name="Orders by Supplier" parent="menu_lunch_admin" id="menu_lunch_control_suppliers" action="action_lunch_control_suppliers" />
+        <menuitem name="Orders by Supplier" parent="menu_lunch_admin" id="lunch_order_line_menu_control_suppliers" action="lunch_order_line_action_control_suppliers" />
 
         <!--Action for Control Accounts-->
-        <record model="ir.actions.act_window" id="action_lunch_control_accounts">
+        <record id="lunch_cashmove_action_control_accounts" model="ir.actions.act_window">
             <field name="name">Control Accounts</field>
             <field name="res_model">lunch.cashmove</field>
             <field name="view_mode">tree,form</field>
-            <field name="search_view_id" ref="view_lunch_cashmove_search_2"/>
+            <field name="search_view_id" ref="lunch_cashmove_view_search_2"/>
             <field name="context">{"search_default_group_by_user":1}</field>
-            <field name="view_id" ref="view_lunch_cashmove_tree"/>
+            <field name="view_id" ref="lunch_cashmove_view_tree"/>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                 Click to create a new payment.
@@ -234,17 +234,17 @@
               </p>
             </field>
         </record>
-        <menuitem name="Control Accounts" parent="menu_lunch_cash" id="menu_lunch_control_accounts" action="action_lunch_control_accounts" />
+        <menuitem name="Control Accounts" parent="menu_lunch_cash" id="lunch_cashmove_menu_control_accounts" action="lunch_cashmove_action_control_accounts" />
 
 
         <!--Action for Payment cashmove-->
-        <record model="ir.actions.act_window" id="action_lunch_cashmove">
+        <record id="lunch_cashmove_action_payment" model="ir.actions.act_window">
             <field name="name">Register Cash Moves</field>
             <field name="res_model">lunch.cashmove</field>
             <field name="view_mode">tree,form</field>
-            <field name="search_view_id" ref="view_lunch_cashmove_search"/>
+            <field name="search_view_id" ref="lunch_cashmove_view_search"/>
             <field name="context">{"search_default_is_payment":1}</field>
-            <field name="view_id" ref="view_lunch_cashmove_tree"/>
+            <field name="view_id" ref="lunch_cashmove_view_tree"/>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                 Click to create a payment.
@@ -254,10 +254,10 @@
               </p>
             </field>
         </record>
-        <menuitem name="Employee Payments" parent="menu_lunch_cash" id="menu_lunch_cashmove" action="action_lunch_cashmove" />
+        <menuitem name="Employee Payments" parent="menu_lunch_cash" id="lunch_cashmove_menu_payment" action="lunch_cashmove_action_payment" />
 
         <!--Action for Products-->
-        <record model="ir.actions.act_window" id="action_lunch_products">
+        <record id="lunch_product_action" model="ir.actions.act_window">
             <field name="name">Products</field>
             <field name="res_model">lunch.product</field>
             <field name="view_mode">tree,form</field>
@@ -270,10 +270,10 @@
               </p>
             </field>
         </record>
-        <menuitem name="Products" parent="menu_lunch_config" id="menu_lunch_products" action="action_lunch_products" />
+        <menuitem name="Products" parent="menu_lunch_config" id="lunch_product_menu" action="lunch_product_action" />
 
         <!--Action for Product categories-->
-        <record model="ir.actions.act_window" id="action_lunch_product_categories">
+        <record id="lunch_product_category_action" model="ir.actions.act_window">
             <field name="name">Product Categories</field>
             <field name="res_model">lunch.product.category</field>
             <field name="view_mode">tree,form</field>
@@ -287,7 +287,7 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_product_category_form">
+        <record id="lunch_product_category_view_form" model="ir.ui.view">
             <field name="name">Product category Form</field>
             <field name="model">lunch.product.category</field>
             <field name="arch" type="xml">
@@ -299,14 +299,14 @@
             </field>
         </record>
 
-        <menuitem name="Product Categories" parent="menu_lunch_config" id="menu_lunch_product_categories" action="action_lunch_product_categories" />
+        <menuitem name="Product Categories" parent="menu_lunch_config" id="lunch_product_category_menu" action="lunch_product_category_action" />
 
         <!--Action for Alert-->
-        <record model="ir.actions.act_window" id="action_lunch_alert">
+        <record id="lunch_alert_action" model="ir.actions.act_window">
             <field name="name">Alerts</field>
             <field name="res_model">lunch.alert</field>
             <field name="view_mode">tree,form</field>
-            <field name="search_view_id" ref="view_lunch_alert_search"/>
+            <field name="search_view_id" ref="lunch_alert_view_search"/>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                 Click to create a lunch alert.
@@ -323,10 +323,10 @@
               </p>
             </field>
         </record>
-        <menuitem name="Alerts" parent="menu_lunch_config" id="menu_lunch_alert" action="action_lunch_alert" />
+        <menuitem name="Alerts" parent="menu_lunch_config" id="lunch_alert_menu" action="lunch_alert_action" />
 
         <!--View for Order lines-->
-        <record model="ir.ui.view" id="view_lunch_order_line_tree">
+        <record id="lunch_order_line_view_tree" model="ir.ui.view">
             <field name="name">lunch.order.line.tree</field>
             <field name="model">lunch.order.line</field>
             <field name="arch" type="xml">
@@ -346,7 +346,7 @@
         </record>
 
         <!--View for Your orders-->
-        <record model="ir.ui.view" id="view_lunch_order_tree">
+        <record id="lunch_order_view_tree" model="ir.ui.view">
             <field name="name">lunch.order.tree</field>
             <field name="model">lunch.order</field>
             <field name="arch" type="xml">
@@ -360,11 +360,11 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_lunch_order_form">
+        <record id="lunch_order_view_form" model="ir.ui.view">
             <field name="name">lunch.order.form</field>
             <field name="model">lunch.order</field>
             <field name="arch" type="xml">
-                <form string='Orders Form' class="oe_lunch">
+                <form string='Orders Form' class="o_lunch">
                     <header>
                         <field name='state' widget='statusbar' statusbar_visible='new,confirmed'/>
                     </header>
@@ -400,7 +400,7 @@
         </record>
 
         <!--View for Products-->
-        <record model="ir.ui.view" id="view_lunch_product_tree">
+        <record id="lunch_product_view_tree" model="ir.ui.view">
             <field name="name">lunch.product.tree</field>
             <field name="model">lunch.product</field>
             <field name="arch" type="xml">
@@ -414,7 +414,7 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_lunch_product_form">
+        <record id="lunch_product_view_form" model="ir.ui.view">
             <field name="name">lunch.product.form</field>
             <field name="model">lunch.product</field>
             <field name="arch" type="xml">
@@ -438,7 +438,7 @@
         </record>
 
         <!--view for alerts-->
-        <record model="ir.ui.view" id="view_lunch_alert_tree">
+        <record id="lunch_alert_view_tree" model="ir.ui.view">
             <field name="name">lunch.alert.tree</field>
             <field name="model">lunch.alert</field>
             <field name="arch" type="xml">
@@ -451,7 +451,7 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_lunch_alert_form">
+        <record id="lunch_alert_view_form" model="ir.ui.view">
             <field name="name">lunch.alert.form</field>
             <field name="model">lunch.alert</field>
             <field name="arch" type="xml">
